--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </video>
 
         <!-- ABOUT ME HEXA -->
-        <div class="about_container mark">
+        <div class="about_container">
 
             <svg class="about_me">
                 <use xlink:href="assets/img/svg/symbols.svg#about_me"></use>
