--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@
           },
           pagination: {
             el: '.swiper-pagination',
+            clickable: true,
           },
         });
   </script>
