--- a/index.html
+++ b/index.html
@@ -199,12 +199,10 @@
                       </svg>
                   </div>
 
-                  <div class="swiper-slide"></div>
-                  <div class="swiper-slide"></div>
-                  <div class="swiper-slide"></div>
-                </div>
-                <!-- Add Pagination -->
-                <div class="swiper-pagination"></div>
+              </div>
+              <!-- Add Arrows -->
+              <div class="swiper-button-next"></div>
+              <div class="swiper-button-prev"></div>
              </div>
 
     </section>
@@ -261,6 +259,10 @@
           pagination: {
             el: '.swiper-pagination',
             clickable: true,
+          },
+          navigation: {
+            nextEl: '.swiper-button-next',
+            prevEl: '.swiper-button-prev',
           },
         });
   </script>
