--- a/index.html
+++ b/index.html
@@ -94,8 +94,10 @@
 
     <div class="hexagon-container fade-content" id="works">
 
-        <div class="works_title_container">
-            <div class="works_title sidebar">My Recent works</div>
+        <div class="title_container">
+            <div class="title_content">
+                <h1 class="title_text" id="works">My recent works</h1>
+            </div>
         </div>
 
         <div class="hexagon-inner">
@@ -159,8 +161,10 @@
             </div>
         </div>
 
-        <div class="skills_title_container">
-            <div class="skills_title">My skills</div>
+        <div class="title_container">
+            <div class="title_content">
+                <h1 class="title_text" id="skills">My skills</h1>
+            </div>
         </div>
 
             <div class="swiper-container">
@@ -260,7 +264,7 @@
             grabCursor: true,
             centeredSlides: true,
             slidesPerView: 'auto',
-            mousewheelControl: true,
+            mousewheelControl: false,
             coverflow: {
               rotate: 20,
               stretch: -20,
