--- a/index.html
+++ b/index.html
@@ -28,71 +28,63 @@
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
+<header>
 
-<!-- HEADER VIDEO BACKGROUND -->
+    <!-- Video background -->
+    <video autoplay loop muted='true' id="video-bg" poster="assets/img/hero_bg.jpg">
+        <source src="assets/vid/coding1.mp4" type="video/mp4">
+        <source src="assets/vid/coding1.webm" type="video/webm">
+    </video>
 
-    <header>
+    <div class="about_container">
 
-        <video autoplay loop muted='true' id="video-bg" poster="assets/img/hero_bg.jpg">
-            <source src="assets/vid/coding1.mp4" type="video/mp4">
-            <source src="assets/vid/coding1.webm" type="video/webm">
-        </video>
-
-        <!-- ABOUT ME HEXA -->
-        <div class="about_container">
-
+        <div class="about_text">
             <svg class="about_me">
                 <use xlink:href="assets/img/svg/symbols.svg#about_me"></use>
             </svg>
-
-            <svg class="about_me_sm">
-                <use xlink:href="assets/img/svg/symbols.svg#about_me_sm"></use>
-            </svg>
-
-
-            <div class="periodic_badges">
-
-                <svg class="logo">
-                    <use xlink:href="assets/img/svg/symbols.svg#logo"></use>
-                </svg>
-
-                <svg class="front-end_hexa" id="about-badge">
-                    <use xlink:href="assets/img/svg/symbols.svg#front-end_hexa"></use>
-                </svg>
-
-                <svg class="dv_hexa" id="about-badge">
-                    <use xlink:href="assets/img/svg/symbols.svg#dv_hexa"></use>
-                </svg>
-
-                <svg class="de_hexa" id="about-badge">
-                    <use xlink:href="assets/img/svg/symbols.svg#de_hexa"></use>
-                </svg>
-
-                <svg class="ux_hexa" id="about-badge">
-                    <use xlink:href="assets/img/svg/symbols.svg#ux_hexa"></use>
-                </svg>
-
-                <svg class="ui_hexa" id="about-badge">
-                    <use xlink:href="assets/img/svg/symbols.svg#ui_hexa"></use>
-                </svg>
-
-            </div>
-
-            <div>
-                <a href="#works" class="scroll-down"><i class="fa fa-chevron-down" aria-hidden="true"></i></a>
-            </div>
-
         </div>
 
-        <div class="header_bottom"></div>
+        <div class="periodic_badges">
+            <svg class="logo">
+                <use xlink:href="assets/img/svg/symbols.svg#logo"></use>
+            </svg>
 
-    </header>
+            <svg class="front-end_hexa" id="about-badge">
+                <use xlink:href="assets/img/svg/symbols.svg#front-end_hexa"></use>
+            </svg>
+
+            <svg class="dv_hexa" id="about-badge">
+                <use xlink:href="assets/img/svg/symbols.svg#dv_hexa"></use>
+            </svg>
+
+            <svg class="de_hexa" id="about-badge">
+                <use xlink:href="assets/img/svg/symbols.svg#de_hexa"></use>
+            </svg>
+
+            <svg class="ux_hexa" id="about-badge">
+                <use xlink:href="assets/img/svg/symbols.svg#ux_hexa"></use>
+            </svg>
+
+            <svg class="ui_hexa" id="about-badge">
+                <use xlink:href="assets/img/svg/symbols.svg#ui_hexa"></use>
+            </svg>
+
+        </div>
+    </div>
+
+    <div class="scroll_container">
+        <a href="#works" class="scroll-down"><i class="fa fa-chevron-down" aria-hidden="true"></i></a>
+    </div>
+
+    <div class="header_bottom"></div>
+
+</header>
 
 
 
 <!-- MY WORKS SECTION -->
 
-    <div class="hexagon-container fade-content" id="works">
+    <div class="hexagon-container" id="works">
 
         <div class="title_container">
             <div class="title_content">
@@ -122,25 +114,25 @@
 
             <div class="hexagon-item">
                <div class="hexagon-img">
-                   <img src="assets/img/azulite.png">
+                   <img src="assets/img/azulite_hexa.png">
                 </div>
             </div>
 
             <div class="hexagon-item">
                <div class="hexagon-img">
-                   <img src="assets/img/azulite.png">
+                   <img src="assets/img/azulite_hexa.png">
                 </div>
             </div>
 
             <div class="hexagon-item">
                <div class="hexagon-img">
-                   <img src="assets/img/azulite.png">
+                   <img src="assets/img/azulite_hexa.png">
                 </div>
             </div>
 
             <div class="hexagon-item">
                <div class="hexagon-img">
-                   <img src="assets/img/azulite.png">
+                   <img src="assets/img/azulite_hexa.png">
                 </div>
             </div>
 
@@ -151,7 +143,7 @@
 
 <!-- MY SKILLS SECTION -->
 
-    <section class="myskills">
+    <div class="myskills">
 
         <div class="skills_modal">
             <div class="skills_modal_inner">
@@ -220,7 +212,7 @@
                   </div>
                   <!-- Add Arrows -->
 
-    </section>
+    </div>
 
 
 <!-- FORM -->
