--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-<header>
+<header class="hero_bg">
 
     <!-- Video background -->
     <video autoplay loop muted='true' id="video-bg" poster="assets/img/hero_bg.jpg">
