--- a/index.html
+++ b/index.html
@@ -44,31 +44,32 @@
             </svg>
         </div>
 
-        <div class="periodic_badges">
-            <svg class="logo">
-                <use xlink:href="assets/img/svg/symbols.svg#logo"></use>
-            </svg>
+        <div class="hexa_badges">
+            <div class="badges_container">
+                <svg class="logo">
+                    <use xlink:href="assets/img/svg/symbols.svg#logo"></use>
+                </svg>
 
-            <svg class="front-end_hexa" id="about-badge">
-                <use xlink:href="assets/img/svg/symbols.svg#front-end_hexa"></use>
-            </svg>
+                <svg class="front-end_hexa" id="about-badge">
+                    <use xlink:href="assets/img/svg/symbols.svg#front-end_hexa"></use>
+                </svg>
 
-            <svg class="dv_hexa" id="about-badge">
-                <use xlink:href="assets/img/svg/symbols.svg#dv_hexa"></use>
-            </svg>
+                <svg class="dv_hexa" id="about-badge">
+                    <use xlink:href="assets/img/svg/symbols.svg#dv_hexa"></use>
+                </svg>
 
-            <svg class="de_hexa" id="about-badge">
-                <use xlink:href="assets/img/svg/symbols.svg#de_hexa"></use>
-            </svg>
+                <svg class="de_hexa" id="about-badge">
+                    <use xlink:href="assets/img/svg/symbols.svg#de_hexa"></use>
+                </svg>
 
-            <svg class="ux_hexa" id="about-badge">
-                <use xlink:href="assets/img/svg/symbols.svg#ux_hexa"></use>
-            </svg>
+                <svg class="ux_hexa" id="about-badge">
+                    <use xlink:href="assets/img/svg/symbols.svg#ux_hexa"></use>
+                </svg>
 
-            <svg class="ui_hexa" id="about-badge">
-                <use xlink:href="assets/img/svg/symbols.svg#ui_hexa"></use>
-            </svg>
-
+                <svg class="ui_hexa" id="about-badge">
+                    <use xlink:href="assets/img/svg/symbols.svg#ui_hexa"></use>
+                </svg>
+            </div>
         </div>
     </div>
 
